--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
         "@emotion/server": "11.4.0",
         "@emotion/styled": "11.9.3",
         "@mui/icons-material": "5.8.4",
+        "@mui/lab": "5.0.0-alpha.88",
         "@mui/material": "5.8.5",
-        "@prisma/client": "3.15.2",
+        "@mui/types": "7.1.4",
+        "@prisma/client": "4.0.0",
         "blitz": "0.45.4",
         "final-form": "4.20.7",
         "passport-github2": "0.1.12",
@@ -51,7 +53,7 @@
         "prettier-plugin-prisma": "3.14.0",
         "pretty-quick": "3.1.3",
         "preview-email": "3.0.5",
-        "prisma": "3.15.2",
+        "prisma": "4.0.0",
         "typescript": "~4.5"
     },
     "private": true,
