--- a/package.json
+++ b/package.json
@@ -64,5 +64,9 @@
         "typescript": "~4.5"
     },
     "private": true,
-    "packageManager": "yarn@1.22.18"
+    "packageManager": "yarn@1.22.18",
+    "engines": {
+        "node": "16.x",
+        "yarn": "1.x"
+    }
 }
